let dagster-* connect to pgbouncer instead of dagster-postgresql

--- a/.env.local.example
+++ b/.env.local.example
@@ -21,7 +21,7 @@ DEER_PASSWORD=
 VOI_USER=
 VOI_PASSWORD=
 
-# A random password for pgbouncer clients (gtfs-api, geoserver, etc.)
+# A random password for pgbouncer clients (gtfs-api, geoserver, dagster, etc.)
 PGBOUNCER_POSTGRES_PASSWORD=XP1EdA6S0BHmybkC
 
 # A random password which will be used for the postgresql database which is used by Dagster. Should be long and should not contain special
