Add bolt authentication config

--- a/.env.local.example
+++ b/.env.local.example
@@ -9,6 +9,10 @@ LAMASSU_BASE_URL=http://10.70.172.11:8500
 LAMASSU_DB_CONNECT_CLIENT_ID=client
 LAMASSU_DB_CONNECT_API_KEY=secret
 
+# Credentials for BOLT API.
+LAMASSU_BOLT_CLIENT_ID=
+LAMASSU_BOLT_CLIENT_PASSWORD=
+
 # User and password from Deer
 DEER_USER=
 DEER_PASSWORD=
