--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,6 +62,9 @@ services:
     environment:
       LAMASSU_DB_CONNECT_CLIENT_ID: ${LAMASSU_DB_CONNECT_CLIENT_ID:?'missing/empty env var $LAMASSU_DB_CONNECT_CLIENT_ID'}
       LAMASSU_DB_CONNECT_API_KEY: ${LAMASSU_DB_CONNECT_API_KEY:?'missing/empty env var $LAMASSU_DB_CONNECT_API_KEY'}
+      LAMASSU_BOLT_AUTH_URL: ${LAMASSU_BOLT_AUTH_URL:?'missing/empty env var $LAMASSU_BOLT_AUTH_URL'}
+      LAMASSU_BOLT_CLIENT_ID: ${LAMASSU_BOLT_CLIENT_ID:?'missing/empty env var $LAMASSU_BOLT_CLIENT_ID'}
+      LAMASSU_BOLT_CLIENT_PASSWORD: ${LAMASSU_BOLT_CLIENT_PASSWORD:?'missing/empty env var $LAMASSU_BOLT_CLIENT_PASSWORD'}
       # depending on base image, JAVA_TOOL_OPTIONS must be used
       LAMASSU_BASE_URL: ${LAMASSU_BASE_URL}
       JDK_JAVA_OPTIONS:
