--- a/.env
+++ b/.env
@@ -7,6 +7,8 @@ LAMASSU_PORT=8500
 LAMASSU_ADMIN_PORT=9002
 LAMASSU_ADMIN_PASSWORD=secret
 LAMASSU_BASE_URL=http://lamassu:8080
+# Authentication URLs for providers requiring OAuth2 authentication
+LAMASSU_BOLT_AUTH_URL=https://mds.bolt.eu/oauth2/token
 
 # redis variables
 REDIS_MEMORY_MB=512
