Add dummy var values

--- a/.env.local.example
+++ b/.env.local.example
@@ -10,8 +10,8 @@ LAMASSU_DB_CONNECT_CLIENT_ID=client
 LAMASSU_DB_CONNECT_API_KEY=secret
 
 # Credentials for BOLT API.
-LAMASSU_BOLT_CLIENT_ID=
-LAMASSU_BOLT_CLIENT_PASSWORD=
+LAMASSU_BOLT_CLIENT_ID=<fill in client id>
+LAMASSU_BOLT_CLIENT_PASSWORD=<fill in password>
 
 # User and password from Deer
 DEER_USER=
