add tier variable

--- a/.env
+++ b/.env
@@ -7,6 +7,7 @@ LAMASSU_PORT=8500
 LAMASSU_ADMIN_PORT=9002
 LAMASSU_ADMIN_PASSWORD=secret
 LAMASSU_BASE_URL=http://lamassu:8080
+LAMASSU_TIER_AUTH_URL=https://auth.tier-services.io/oauth2/aus41nfrunfKbXbOr417/v1/token
 
 # redis variables
 REDIS_MEMORY_MB=512
