rename tier variables

--- a/.env.local.example
+++ b/.env.local.example
@@ -9,10 +9,9 @@ LAMASSU_BASE_URL=http://10.70.172.11:8500
 LAMASSU_DB_CONNECT_CLIENT_ID=client
 LAMASSU_DB_CONNECT_API_KEY=secret
 
-# Credentials for Tier.
-LAMASSU_TIER_API_URL=client
-LAMASSU_TIER_USER=client
-LAMASSU_TIER_PASSWORD=secret
+# Credentials for Tier API.
+LAMASSU_TIER_CLIENT_ID=<fill in client id>
+LAMASSU_TIER_CLIENT_PASSWORD=<fill in password>
 
 # User and password from Deer
 DEER_USER=
