--- a/.env.local.example
+++ b/.env.local.example
@@ -23,3 +23,13 @@ DAGSTER_POSTGRES_PASSWORD=
 
 # A random password for geoserver admin access
 GEOSERVER_ADMIN_PASSWORD=FNn71ymEeBJ13VHd
+
+# A random password which will be used for the postgresql database which is used by OCPDB. Should be long and should not contain special
+# signs.
+OCPDB_POSTGRES_PASSWORD=
+
+# A secret key used for Flask. Should be a random string of 32 chars.
+OCPDB_SECRET_KEY=
+
+# A secret key needed for some OCPDB data sources to create reproducable UIDs
+OCPDB_OBJECT_ID_SECRET=
