--- a/.env
+++ b/.env
@@ -64,3 +64,13 @@ GEOSERVER_INITIAL_MEMORY=512M
 GEOSERVER_MAXIMUM_MEMORY=4G
 # In prod, should switch to PRODUCTION_LOGGING. For other logging profiles see: https://docs.geoserver.org/stable/en/user/configuration/globalsettings.html#config-globalsettings-log-profile
 GEOSERVER_LOGGING_PROFILE=DEFAULT_LOGGING
+
+# ocpdb
+OCPDB_POSTGRES_USER=ocpdb
+OCPDB_POSTGRES_DB=ocpdb
+OCPDB_API_PORT=7000
+OCPDB_POSTGRES_DOCKER_COMPOSE_SERVICE=ocpdb-db
+OCPDB_CELERY_BROKER_URL=amqp://ocpdb-rabbitmq
+OCPDB_PROJECT_URL=https://dev-ipl.mobidata-bw.de/ocpdb
+OCPDB_PRIVACY_URL=https://www.nvbw.de/datenschutz
+OCPDB_LEGAL_NOTICE_URL=https://www.nvbw.de/impressum
