--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,27 @@
 # compose "namespace", prepended to all network names, container names, etc.
 name: ipl
 
+x-ocpdb-defaults: &ocpdb-defaults
+  image: ghcr.io/binary-butterfly/ocpdb:latest
+  networks: [ipl]
+  environment:
+    OCPDB_POSTGRES_DB: ${OCPDB_POSTGRES_DB}
+    OCPDB_POSTGRES_USER: ${OCPDB_POSTGRES_USER}
+    OCPDB_POSTGRES_PASSWORD: ${OCPDB_POSTGRES_PASSWORD}
+    OCPDB_POSTGRES_DOCKER_COMPOSE_SERVICE: ${OCPDB_POSTGRES_DOCKER_COMPOSE_SERVICE}
+    OCPDB_PROJECT_URL: ${OCPDB_PROJECT_URL}
+    OCPDB_CELERY_BROKER_URL: ${OCPDB_CELERY_BROKER_URL}
+  restart: unless-stopped
+  depends_on:
+    ocpdb-db:
+      condition: service_healthy
+    ocpdb-rabbitmq:
+      condition: service_healthy
+  volumes:
+    - ./etc/ocpdb/config.yaml:/app/config.yaml
+    - ./var/ocpdb/logs:/app/logs
+    - ./var/ocpdb/temp:/app/temp
+
 services:
   # Traefik is our ingress: requests enter our infrastructure through it.
   # It is an HTTP reverse proxy, discovering available services (and their containers)
@@ -158,7 +179,7 @@ services:
         condition: service_healthy
       gtfs-db:
         # For transit layer
-        condition: service_healthy     
+        condition: service_healthy
     healthcheck:
       test: "curl -fsS -o /dev/null -u '${GEOSERVER_ADMIN_USER}':'${GEOSERVER_ADMIN_PASSWORD}' http://localhost:8080/geoserver/rest/about/version.xml"
       interval: 0m15s
@@ -348,6 +369,50 @@ services:
       - "traefik.http.routers.gtfs-swagger-ui.rule=PathPrefix(`/docs/gtfs`)"
       - "traefik.http.services.gtfs-swagger-ui.loadbalancer.server.port=8080"
     restart: unless-stopped
+
+  ocpdb-flask:
+    <<: *ocpdb-defaults
+    command: ["gunicorn", "--bind", "0.0.0.0:5000", "webapp.entry_point_gunicorn:app"]
+    ports:
+      - ${OCPDB_API_PORT}:5000
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.ocpdb-flask.rule=PathPrefix(`/ocpdb`)"
+      - "traefik.http.services.ocpdb-flask.loadbalancer.server.port=5000"
+      - "traefik.http.routers.ocpdb-flask.middlewares=ocpdb-stripprefix"
+      - "traefik.http.middlewares.ocpdb-stripprefix.stripprefix.prefixes=/ocpdb"
+
+  ocpdb-worker:
+    <<: *ocpdb-defaults
+    command: ["celery", "-A", "webapp.entry_point_celery", "worker", "-c", "2"]
+
+  ocpdb-db:
+    networks: [ipl]
+    image: postgis/postgis:16-3.4
+    volumes:
+      - ./var/ocpdb/ocpdb-db:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_USER=${OCPDB_POSTGRES_USER}
+      - POSTGRES_PASSWORD=${OCPDB_POSTGRES_PASSWORD}
+      - POSTGRES_DB=${OCPDB_POSTGRES_DB}
+      - PGUSER=${OCPDB_POSTGRES_USER}
+    healthcheck:
+      test: "PGPASSWORD=${OCPDB_POSTGRES_PASSWORD} pg_isready -h 127.0.0.1 -U ${OCPDB_POSTGRES_USER} -d ${OCPDB_POSTGRES_DB}"
+      interval: 10s
+      timeout: 3s
+      retries: 3
+
+  ocpdb-rabbitmq:
+    networks: [ipl]
+    image: rabbitmq:3.12
+    environment:
+      # Disable spammy logging
+      RABBITMQ_SERVER_ADDITIONAL_ERL_ARGS: '-rabbit log [{console,[{level,warning}]}]'
+    healthcheck:
+      test: rabbitmq-diagnostics -q ping
+      interval: 1s
+      timeout: 1s
+      retries: 20
 
 networks:
   ipl:
