--- a/.env
+++ b/.env
@@ -74,3 +74,11 @@ OCPDB_CELERY_BROKER_URL=amqp://ocpdb-rabbitmq
 OCPDB_PROJECT_URL=https://dev-ipl.mobidata-bw.de/ocpdb
 OCPDB_PRIVACY_URL=https://www.nvbw.de/datenschutz
 OCPDB_LEGAL_NOTICE_URL=https://www.nvbw.de/impressum
+
+# ParkAPI
+PARK_API_API_PORT=7500
+PARK_API_POSTGRES_USER=park-api
+PARK_API_POSTGRES_DB=park-api
+PARK_API_POSTGRES_HOST=park-api-db
+PARK_API_CELERY_BROKER_URL=amqp://park-api-rabbitmq
+PARK_API_PROJECT_URL=https://dev-ipl.mobidata-bw.de/park-api
