--- a/.env.local.example
+++ b/.env.local.example
@@ -35,3 +35,10 @@ OCPDB_SECRET_KEY=
 # A secret key needed for some OCPDB data sources to create reproducable UIDs.  Should be long and should not contain special signs in
 # order to prevent escaping issues (eg: 32 chars alphanumeric).
 OCPDB_OBJECT_ID_SECRET=
+
+# A random password which will be used for the postgresql database which is used by ParkAPI. Should be long and should not contain special
+# signs.
+PARK_API_POSTGRES_PASSWORD=
+
+# A secret key used for Flask. Should be long and should not contain special signs.
+PARK_API_SECRET_KEY=
