makefile targets, polishing

--- a/.env.local.example
+++ b/.env.local.example
@@ -18,18 +18,20 @@ DEER_USER=
 DEER_PASSWORD=
 
 # A random password which will be used for the postgresql database which is used by Dagster. Should be long and should not contain special
-# signs.
+# signs in order to prevent escaping issues (eg: 32 chars alphanumeric).
 DAGSTER_POSTGRES_PASSWORD=
 
 # A random password for geoserver admin access
 GEOSERVER_ADMIN_PASSWORD=FNn71ymEeBJ13VHd
 
 # A random password which will be used for the postgresql database which is used by OCPDB. Should be long and should not contain special
-# signs.
+# signs in order to prevent escaping issues (eg: 32 chars alphanumeric).
 OCPDB_POSTGRES_PASSWORD=
 
-# A secret key used for Flask. Should be a random string of 32 chars.
+# A secret key used for Flask. Should be long and should not contain special signs in order to prevent escaping issues (eg: 32 chars
+# alphanumeric).
 OCPDB_SECRET_KEY=
 
-# A secret key needed for some OCPDB data sources to create reproducable UIDs
+# A secret key needed for some OCPDB data sources to create reproducable UIDs.  Should be long and should not contain special signs in
+# order to prevent escaping issues (eg: 32 chars alphanumeric).
 OCPDB_OBJECT_ID_SECRET=
