--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ x-ocpdb-defaults: &ocpdb-defaults
     OCPDB_POSTGRES_DB: ${OCPDB_POSTGRES_DB}
     OCPDB_POSTGRES_USER: ${OCPDB_POSTGRES_USER}
     OCPDB_POSTGRES_PASSWORD: ${OCPDB_POSTGRES_PASSWORD}
-    OCPDB_POSTGRES_DOCKER_COMPOSE_SERVICE: ${OCPDB_POSTGRES_DOCKER_COMPOSE_SERVICE}
+    OCPDB_POSTGRES_HOST: ${OCPDB_POSTGRES_HOST}
     OCPDB_PROJECT_URL: ${OCPDB_PROJECT_URL}
     OCPDB_CELERY_BROKER_URL: ${OCPDB_CELERY_BROKER_URL}
   restart: unless-stopped
